--- a/Aulas.ipynb
+++ b/Aulas.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/py2220360233/CEE2/blob/main/Aulas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/py2220360233/CEE2/blob/Aula-16%2F10%2F2024/Aulas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,15 +34,6 @@
       "metadata": {
         "id": "SqoOgoNMmA6p"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "g6I2DfG-XgPx"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -210,29 +201,6 @@
       "metadata": {
         "id": "MejS9QFYlstA"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Olá, letícia\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gTDtcplka8dS",
-        "outputId": "36ef6542-98d8-4d22-86b7-fe88f22019ba"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Olá, letícia\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
