--- a/Aulas.ipynb
+++ b/Aulas.ipynb
@@ -247,10 +247,27 @@
         "print(type(z))    # Exibe \"<class 'int'> indicando que é inteiro."
       ],
       "metadata": {
-        "id": "264OCt1wua_F"
+        "id": "264OCt1wua_F",
+        "outputId": "ae9b4815-3202-471a-f6ce-bc01babfd25e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "1024\n",
+            "1234\n",
+            "<class 'int'>\n",
+            "<class 'int'>\n",
+            "<class 'int'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -269,10 +286,27 @@
         "print(type(z))    # Exibe \"<class 'float'> indicando que é ponto flutuante."
       ],
       "metadata": {
-        "id": "G2Hg7DaiufDK"
+        "id": "G2Hg7DaiufDK",
+        "outputId": "0f361626-30f6-48f8-b974-4a28bd461b16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20.5\n",
+            "3.1415\n",
+            "1.2345\n",
+            "<class 'float'>\n",
+            "<class 'float'>\n",
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -291,10 +325,27 @@
         "print(type(z))    # Exibe \"<class 'complex'> indicando que é complexo."
       ],
       "metadata": {
-        "id": "w1DCF9tjuiS4"
+        "id": "w1DCF9tjuiS4",
+        "outputId": "106325e2-900a-45b2-b28e-438ce8d89726",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1j\n",
+            "(2+3j)\n",
+            "(1.2+3.4j)\n",
+            "<class 'complex'>\n",
+            "<class 'complex'>\n",
+            "<class 'complex'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -330,10 +381,27 @@
         "print(type(z))    # Exibe \"<class 'str'> indicando que é string."
       ],
       "metadata": {
-        "id": "fOk2y7WgvKKp"
+        "id": "fOk2y7WgvKKp",
+        "outputId": "35107f58-97be-45c7-eacf-46b65580b6f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n",
+            "20\n",
+            "3.1415\n",
+            "<class 'str'>\n",
+            "<class 'str'>\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -369,10 +437,27 @@
         "print(type(z))    # Exibe \"<class 'bool'> indicando que é booleano."
       ],
       "metadata": {
-        "id": "CMLwvEqFvWRy"
+        "id": "CMLwvEqFvWRy",
+        "outputId": "30a5ffd9-ac44-4ddd-cd52-1e4cd4a8ec3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n",
+            "<class 'bool'>\n",
+            "<class 'bool'>\n",
+            "<class 'bool'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -410,6 +495,41 @@
       "metadata": {
         "id": "3L4zf0sbsc5M"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "x = 456\n",
+        "y = 2.9\n",
+        "z = (3>2)\n",
+        "\n",
+        "\n",
+        "print (float(x))\n",
+        "print(int(y))\n",
+        "print(int(z))\n",
+        "print(float(z))"
+      ],
+      "metadata": {
+        "id": "mMMYzmepfYrz",
+        "outputId": "a6e33c6b-b206-4974-bd34-33fa213513fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "456.0\n",
+            "2\n",
+            "1\n",
+            "1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
