16/10/2024 – Tipos de dados – exercício 2

--- a/Aulas.ipynb
+++ b/Aulas.ipynb
@@ -248,10 +248,10 @@
       ],
       "metadata": {
         "id": "264OCt1wua_F",
-        "outputId": "ae9b4815-3202-471a-f6ce-bc01babfd25e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ae9b4815-3202-471a-f6ce-bc01babfd25e"
       },
       "execution_count": 1,
       "outputs": [
@@ -287,10 +287,10 @@
       ],
       "metadata": {
         "id": "G2Hg7DaiufDK",
-        "outputId": "0f361626-30f6-48f8-b974-4a28bd461b16",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0f361626-30f6-48f8-b974-4a28bd461b16"
       },
       "execution_count": 2,
       "outputs": [
@@ -326,10 +326,10 @@
       ],
       "metadata": {
         "id": "w1DCF9tjuiS4",
-        "outputId": "106325e2-900a-45b2-b28e-438ce8d89726",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "106325e2-900a-45b2-b28e-438ce8d89726"
       },
       "execution_count": 3,
       "outputs": [
@@ -382,10 +382,10 @@
       ],
       "metadata": {
         "id": "fOk2y7WgvKKp",
-        "outputId": "35107f58-97be-45c7-eacf-46b65580b6f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "35107f58-97be-45c7-eacf-46b65580b6f6"
       },
       "execution_count": 4,
       "outputs": [
@@ -438,10 +438,10 @@
       ],
       "metadata": {
         "id": "CMLwvEqFvWRy",
-        "outputId": "30a5ffd9-ac44-4ddd-cd52-1e4cd4a8ec3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30a5ffd9-ac44-4ddd-cd52-1e4cd4a8ec3d"
       },
       "execution_count": 5,
       "outputs": [
@@ -511,11 +511,11 @@
         "print(float(z))"
       ],
       "metadata": {
-        "id": "mMMYzmepfYrz",
-        "outputId": "a6e33c6b-b206-4974-bd34-33fa213513fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mMMYzmepfYrz",
+        "outputId": "a6e33c6b-b206-4974-bd34-33fa213513fe"
       },
       "execution_count": 18,
       "outputs": [
@@ -548,6 +548,37 @@
       "metadata": {
         "id": "4-0M8jO3uCRQ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = 5\n",
+        "num2= 2.5\n",
+        "print(num1 + num2)\n",
+        "print(num1 - num2)\n",
+        "print(num1 * num2)\n",
+        "print(num1 / num2)"
+      ],
+      "metadata": {
+        "id": "XPFCi6eqkics",
+        "outputId": "7f1514f8-0121-427e-8dec-14c0c908e880",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.5\n",
+            "2.5\n",
+            "12.5\n",
+            "2.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
