--- a/Aulas.ipynb
+++ b/Aulas.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/py2220360233/CEE2/blob/Aula---21%2F10%2F24/Aulas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/py2220360233/CEE2/blob/Aula-21%2F10%2F24/Aulas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1043,7 +1043,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1127,7 +1127,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1169,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1208,7 +1208,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1241,7 +1241,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1272,16 +1272,17 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "frutas = (\"maçã\", \"banana\", \"laranja\", \"uva\")\n",
+        "print(frutas.index(\"laranja\"))\n"
       ],
       "metadata": {
         "id": "HrbhizJVPYjV",
-        "outputId": "3b6aa146-3186-4576-ba8a-8bdc5c3b2a84",
+        "outputId": "57ca062b-5ad6-449d-c753-eac044da3acf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
