18/11/24 - operaçoes basicas - Exercício número 2

--- a/aulas.ipynb
+++ b/aulas.ipynb
@@ -3868,53 +3868,10 @@
         "print(\"-----\")"
       ],
       "metadata": {
-        "id": "DYjubt7PjWjm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a38ad0ed-be56-4708-f2f0-711681eb5856"
+        "id": "DYjubt7PjWjm"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--a--\n",
-            "[1 2 3 4]\n",
-            "type: <class 'numpy.ndarray'>\n",
-            "dtype: int64\n",
-            "size: 4\n",
-            "ndim: 1\n",
-            "shape: (4,)\n",
-            "-----\n",
-            "--b--\n",
-            "[[1 2 3]\n",
-            " [4 5 6]]\n",
-            "type: <class 'numpy.ndarray'>\n",
-            "dtype: int64\n",
-            "size: 6\n",
-            "ndim: 2\n",
-            "shape: (2, 3)\n",
-            "-----\n",
-            "--zeros--\n",
-            "dtype: float64\n",
-            "[[0. 0. 0.]\n",
-            " [0. 0. 0.]]\n",
-            "-----\n",
-            "--ones--\n",
-            "[[1. 1.]\n",
-            " [1. 1.]]\n",
-            "-----\n",
-            "--seq--\n",
-            "[0 1 2 3 4 5 6 7 8 9]\n",
-            "-----\n",
-            "--lin--\n",
-            "[0.   0.25 0.5  0.75 1.  ]\n",
-            "-----\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3940,31 +3897,10 @@
         "print(b)  # Saída: [[ 0  1  2] [ 3  4  5] [ 6  7  8] [ 9 10 11]]\n"
       ],
       "metadata": {
-        "id": "PetCK-bVs41_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5afb4660-b94a-4687-e64e-43a141ab4dfa"
+        "id": "PetCK-bVs41_"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
-            "-----\n",
-            "[[ 0  1  2  3]\n",
-            " [ 4  5  6  7]\n",
-            " [ 8  9 10 11]]\n",
-            "-----\n",
-            "[[ 0  1  2]\n",
-            " [ 3  4  5]\n",
-            " [ 6  7  8]\n",
-            " [ 9 10 11]]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3985,32 +3921,10 @@
         "a.dtype     ## exibe: dtype('int64')"
       ],
       "metadata": {
-        "id": "XktvaZAt-R04",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "413552df-4d7b-469c-ca90-bf659bd797e1"
+        "id": "XktvaZAt-R04"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[2 3 4]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "dtype('int64')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4020,32 +3934,10 @@
         "b.dtype   ## exibe: dtype('float64')"
       ],
       "metadata": {
-        "id": "w8GtcqHb-gfP",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "57a47c9e-6926-49ff-89d9-dccaf9982a0a"
+        "id": "w8GtcqHb-gfP"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1.2 3.5 5.1]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "dtype('float64')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4084,26 +3976,10 @@
         "b"
       ],
       "metadata": {
-        "id": "VOIOEMgR_HgJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1ae8fc4b-e182-419d-b402-8a8d669d956e"
+        "id": "VOIOEMgR_HgJ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1.5, 2. , 3. ],\n",
-              "       [4. , 5. , 6. ]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4121,26 +3997,10 @@
         "c"
       ],
       "metadata": {
-        "id": "EuDnS1PV_pHx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c10dd640-952b-4cb4-a2fd-881f90851198"
+        "id": "EuDnS1PV_pHx"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1.+0.j, 2.+0.j],\n",
-              "       [3.+0.j, 4.+0.j]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4159,27 +4019,10 @@
         "np.zeros((3, 4))    # Cria uma matriz 3 por 4 com todos os elementos iguais a 0."
       ],
       "metadata": {
-        "id": "S_TgV2pCAR9h",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c3ec76d8-7e71-4a5c-884e-fd6c188378a2"
+        "id": "S_TgV2pCAR9h"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4187,31 +4030,10 @@
         "np.ones((2, 3, 4), dtype= np.int16)    # Cria uma matriz 2 por 3 por 4 com todos os elementos iguais a 1."
       ],
       "metadata": {
-        "id": "KUba37wxAVjg",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "28b811c5-73a3-4e49-b326-6c7784e901d2"
+        "id": "KUba37wxAVjg"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[[1, 1, 1, 1],\n",
-              "        [1, 1, 1, 1],\n",
-              "        [1, 1, 1, 1]],\n",
-              "\n",
-              "       [[1, 1, 1, 1],\n",
-              "        [1, 1, 1, 1],\n",
-              "        [1, 1, 1, 1]]], dtype=int16)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4219,26 +4041,10 @@
         "np.empty((2, 3))    # Cria uma matriz 2 por 3 sem inicializar os elementos."
       ],
       "metadata": {
-        "id": "1CewcvTSAVRo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fba8836c-5286-4f71-94fe-07ba8da5ea58"
+        "id": "1CewcvTSAVRo"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1.5, 2. , 3. ],\n",
-              "       [4. , 5. , 6. ]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4255,25 +4061,10 @@
         "np.arange(10, 30, 5)    # Cria um vetor com elementos de 10 a 30 com passo 5."
       ],
       "metadata": {
-        "id": "UdhLYhTrA4-A",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f59eacc3-b1e9-4778-e397-5024a8e3a7e3"
+        "id": "UdhLYhTrA4-A"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([10, 15, 20, 25])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4281,25 +4072,10 @@
         "np.arange(0, 2, .3)    # Cria um vetor com elementos de 0 a 2 com passo 0.3."
       ],
       "metadata": {
-        "id": "FwmCZbZiA_J3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0adc33bb-2156-4d0d-dafe-e37ad63e4cba"
+        "id": "FwmCZbZiA_J3"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0. , 0.3, 0.6, 0.9, 1.2, 1.5, 1.8])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4347,22 +4123,10 @@
         "print(a)"
       ],
       "metadata": {
-        "id": "qlldY-1eB3Yx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bf742bc9-9ce8-40e7-fe5f-29600474a12e"
+        "id": "qlldY-1eB3Yx"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0 1 2 3 4 5]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4371,25 +4135,10 @@
         "print(b)"
       ],
       "metadata": {
-        "id": "YEf7325YB5f_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4a86b4b3-3e25-43fe-b05a-8203c6e3af8e"
+        "id": "YEf7325YB5f_"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[ 0  1  2]\n",
-            " [ 3  4  5]\n",
-            " [ 6  7  8]\n",
-            " [ 9 10 11]]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4398,28 +4147,10 @@
         "print(c)"
       ],
       "metadata": {
-        "id": "QOvffrdMB6VH",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7aeb242f-66f5-4c58-f3da-2a864d0ec119"
+        "id": "QOvffrdMB6VH"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[[ 0  1  2  3]\n",
-            "  [ 4  5  6  7]\n",
-            "  [ 8  9 10 11]]\n",
-            "\n",
-            " [[12 13 14 15]\n",
-            "  [16 17 18 19]\n",
-            "  [20 21 22 23]]]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4436,22 +4167,10 @@
         "print(np.arange(10000))"
       ],
       "metadata": {
-        "id": "YQgXgUeUCV2w",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cff7f90b-d406-4164-8d43-c331599845fe"
+        "id": "YQgXgUeUCV2w"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[   0    1    2 ... 9997 9998 9999]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4459,28 +4178,10 @@
         "print(np.arange(10000).reshape(100, 100))"
       ],
       "metadata": {
-        "id": "p8cvmrIyCb3_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "24f23693-a367-4a81-996b-1eb16103dac4"
+        "id": "p8cvmrIyCb3_"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[   0    1    2 ...   97   98   99]\n",
-            " [ 100  101  102 ...  197  198  199]\n",
-            " [ 200  201  202 ...  297  298  299]\n",
-            " ...\n",
-            " [9700 9701 9702 ... 9797 9798 9799]\n",
-            " [9800 9801 9802 ... 9897 9898 9899]\n",
-            " [9900 9901 9902 ... 9997 9998 9999]]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4507,63 +4208,6 @@
       "metadata": {
         "id": "gxA0rbWh4cUi"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "##a)\n",
-        "import numpy as np\n",
-        "np.zeros((3, 3))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XHulu5YrVRCB",
-        "outputId": "698d4d6d-676e-4981-9926-3709dd20d6a8"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0., 0., 0.],\n",
-              "       [0., 0., 0.],\n",
-              "       [0., 0., 0.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#b)\n",
-        "np.arange(1, 20, 3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eCgEvRkmVw9S",
-        "outputId": "3676eabf-c779-4657-8733-1ce627e6ba46"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 1,  4,  7, 10, 13, 16, 19])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -4598,10 +4242,35 @@
         "print(a < 3, \"\\n\")            # Retorna um vetor booleano com True para cada elemento menor que 35."
       ],
       "metadata": {
-        "id": "4WondI1UDNc4"
+        "id": "4WondI1UDNc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cdb5bad8-c6f0-43c3-86f8-d58b29092c0f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2 5 4 0] \n",
+            "\n",
+            "[4 7 6 2] \n",
+            "\n",
+            "[2 6 6 3] \n",
+            "\n",
+            "[ 2  4  2 -3] \n",
+            "\n",
+            "[0 1 4 9] \n",
+            "\n",
+            "[ 9.09297427 -9.58924275 -7.56802495  0.        ] \n",
+            "\n",
+            "[ True False False  True] \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4623,10 +4292,30 @@
         "print(A.dot(B), \"\\n\")    # Produto matricial"
       ],
       "metadata": {
-        "id": "IWc_-piADswn"
+        "id": "IWc_-piADswn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "29434427-7792-4858-d132-a15ec248b738"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[2 0]\n",
+            " [0 4]] \n",
+            "\n",
+            "[[5 4]\n",
+            " [3 4]] \n",
+            "\n",
+            "[[5 4]\n",
+            " [3 4]] \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4650,10 +4339,27 @@
         "print(B, \"\\n\")\n"
       ],
       "metadata": {
-        "id": "vJSfhI3FEZQ4"
+        "id": "vJSfhI3FEZQ4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "48f66d08-83ce-4be1-9165-d246d82672ec"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[3 3]\n",
+            " [0 3]] \n",
+            "\n",
+            "[[5 3]\n",
+            " [3 7]] \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4677,10 +4383,30 @@
         "print(A.std())    # Exibe o desvio padrão dos elementos."
       ],
       "metadata": {
-        "id": "_UElF5P4GBIB"
+        "id": "_UElF5P4GBIB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da49690d-bb64-408c-d92c-aa6d4820038b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 1]\n",
+            " [0 1]]\n",
+            "\n",
+            "\n",
+            "3\n",
+            "0\n",
+            "1\n",
+            "0.75\n",
+            "0.4330127018922193\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4702,10 +4428,33 @@
         "print( B.cumsum(axis= 1), \"\\n\" )   # soma cumulativa em cada linha"
       ],
       "metadata": {
-        "id": "OcyUXKBeGlhH"
+        "id": "OcyUXKBeGlhH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "abfb206a-4804-4084-f6d4-e0ef3b48a25d"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]] \n",
+            "\n",
+            "[12 15 18 21] \n",
+            "\n",
+            "[0 4 8] \n",
+            "\n",
+            "[[ 0  1  3  6]\n",
+            " [ 4  9 15 22]\n",
+            " [ 8 17 27 38]] \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4718,6 +4467,34 @@
       "metadata": {
         "id": "y7zcg8589Eqj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([10, 20, 30, 40, 50])\n",
+        "A -= 5\n",
+        "print(A)\n",
+        "A = A**2\n",
+        "print(A)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R8qa9MUwYXlC",
+        "outputId": "3bea3f85-cd1c-4715-f2c9-e05f55b53a69"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 5 15 25 35 45]\n",
+            "[  25  225  625 1225 2025]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
