--- a/aulas.ipynb
+++ b/aulas.ipynb
@@ -2671,7 +2671,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3189,11 +3189,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "Kpbkz74GvvRW"
+        "id": "Kpbkz74GvvRW",
+        "outputId": "f8b9c001-d701-4357-f2d1-17acf94477e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Meu nome é João e eu tenho 25 anos.\n",
+            "Meu nome é João e eu tenho 25 anos.\n",
+            "Meu nome é João e eu tenho 25 anos.\n"
+          ]
+        }
+      ],
       "source": [
         "nome = \"João\"\n",
         "idade = 25\n",
@@ -3222,6 +3236,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "nome = \"Serj\"\n",
+        "sobrenome = \"Tankian\"\n",
+        "def saudacao(nome, sobrenome):\n",
+        "  return \"Olá, {} {}!\".format(nome, sobrenome)\n",
+        "\n",
+        "saudacao(nome, sobrenome)\n"
+      ],
+      "metadata": {
+        "id": "TWtcmMkem53g",
+        "outputId": "12623eb4-2ba5-46bc-e2b7-a20efbe71c10",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Olá, Serj Tankian!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Exercício 2:\n",
@@ -3238,11 +3287,32 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "email = \"usuario@dominio.com\"\n",
+        "def extrair_dominio(email):\n",
+        "  dominio = email.split(\"@\")[1]\n",
+        "  print(dominio)\n",
+        "\n",
+        "extrair_dominio(email)"
+      ],
       "metadata": {
-        "id": "0o6vRsU4zjjk"
-      }
+        "id": "dHvGItaL4emU",
+        "outputId": "24a7f1ea-588a-417b-95d2-b0875bad3498",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dominio.com\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3275,10 +3345,29 @@
         "altera_telefone(61997351520)"
       ],
       "metadata": {
-        "id": "YOWro67Tz4qM"
+        "id": "YOWro67Tz4qM",
+        "outputId": "0bae3bac-363c-418b-8973-570d3c5aaa9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'(61) 99735-1520'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
